# api-cgm

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
core/: auth.py  config.py  dependencies.py  logger.py
db/: database.py
db/models/: basal_logs.py  bolus_log.py  hypo_event.py  meal_log.py  summary.py  user.py
models/: glucose.py  user.py
routers/: auth.py  basal.py  bolus.py  glucose.py  health.py  hypo.py  insight.py  meal.py  report.py
schemas/: basal.py  bolus.py  glucose.py  hypo.py  meal_log.py
services/: basal_service.py  bolus_service.py  glucose_service.py  hypo_service.py  insight_service.py  meal_service.py  report_service.py
utils/: glucose.py
